[package]
name = "barriers"
version = "0.1.0"
authors = ["Scott Richardson <scott@scottrichardson.dev>"]
edition = "2018"
description = "A barrier spin lock implementation"
documentation = "https://github.com/scottjr632/rust-barriers"
readme = "README.md"
licence = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]